[tool.poetry]
name = "bocchi-eng-template-python"
version = "0.1.0"
description = ""
authors = ["andmohiko <andmohiko@gmail.com>"]
readme = "README.md"
packages = [{include = "bocchi_eng_template_python"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
